--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="./styles.js/arrays.js"></script>
     <script src="./styles.js/rest.js"></script>
     <script src="./styles.js/autocheck.arrays.js"></script>
+    <script src="./styles.js/objects.js"></script>
   </body>
 </html>
