--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script src="./styles.js/rest.js"></script>
     <script src="./styles.js/autocheck.arrays.js"></script>
     <script src="./styles.js/objects.js"></script>
+    <script src="styles.js/basket-of-goods.js"></script>
   </body>
 </html>
