--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="./styles.js/objects.js"></script>
     <script src="./styles.js/basket-of-goods.js"></script>
     <script src="styles.js/autocheck.objects.js"></script>
+    <script src="styles.js/test.js"></script>
   </body>
 </html>
