--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="./styles.js/basket-of-goods.js"></script>
     <script src="styles.js/autocheck.objects.js"></script>
     <script src="styles.js/test.js"></script>
+    <script src="styles.js/callback.js"></script>
   </body>
 </html>
