--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <button type="button" class="js-button">это кнопка</button>
     <script src="./styles.js/styles.js"></script>
     <script src="./styles.js/arrays.js"></script>
     <script src="./styles.js/rest.js"></script>
