--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="styles.js/autocheck.objects.js"></script>
     <script src="styles.js/test.js"></script>
     <script src="styles.js/callback.js"></script>
+    <script src="styles.js/tasks.js"></script>
   </body>
 </html>
