--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   </head>
   <body>
     <button type="button" class="js-button">это кнопка</button>
-    <script src="./styles.js/styles.js"></script>
-    <script src="./styles.js/arrays.js"></script>
-    <script src="./styles.js/rest.js"></script>
-    <script src="./styles.js/autocheck.arrays.js"></script>
-    <script src="./styles.js/objects.js"></script>
-    <script src="./styles.js/basket-of-goods.js"></script>
-    <script src="styles.js/autocheck.objects.js"></script>
-    <script src="styles.js/test.js"></script>
-    <script src="styles.js/callback.js"></script>
-    <script src="styles.js/tasks.js"></script>
+    <script src="./styles.js/styles.js" type="module"></script>
+    <script src="./styles.js/arrays.js" type="module"></script>
+    <script src="./styles.js/rest.js" type="module"></script>
+    <script src="./styles.js/autocheck.arrays.js" type="module"></script>
+    <script src="./styles.js/objects.js" type="module"></script>
+    <script src="./styles.js/basket-of-goods.js" type="module"></script>
+    <script src="styles.js/autocheck.objects.js" type="module"></script>
+    <script src="styles.js/test.js" type="module"></script>
+    <script src="styles.js/callback.js" type="module"></script>
+    <script src="styles.js/tasks.js" type="module"></script>
+    <script src="styles.js/first.modul.js" type="module"></script>
   </body>
 </html>
