--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <script src="styles.js/callback.js" type="module"></script>
     <script src="styles.js/tasks.js" type="module"></script>
     <script src="styles.js/first.modul.js" type="module"></script>
+    <script src="styles.js/arrow.functions.js" type="module"></script>
+    <script src="styles.js/arrays.methods.js"></script>
+    <script src="styles.js/autocheck.arrays.methods.js"></script>
   </body>
 </html>
