--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <script src="styles.js/first.modul.js" type="module"></script>
     <script src="styles.js/arrow.functions.js" type="module"></script>
     <script src="styles.js/arrays.methods.js"></script>
-    <script src="styles.js/autocheck.arrays.methods.js"></script>
+    <script src="styles.js/autocheck.strings.methods.js"></script>
   </body>
 </html>
