--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <script src="styles.js/arrow.functions.js" type="module"></script>
     <script src="styles.js/arrays.methods.js"></script>
     <script src="styles.js/autocheck.strings.methods.js"></script>
+    <script src="styles.js/modul-six.js"></script>
   </body>
 </html>
