--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <button type="button" class="js-button">это кнопка</button>
+    <button type="button" class="js-click">это кнопка</button>
+    <div class="js-box box"></div>
     <script src="./styles.js/styles.js" type="module"></script>
     <script src="./styles.js/arrays.js" type="module"></script>
     <script src="./styles.js/rest.js" type="module"></script>
@@ -21,6 +22,7 @@
     <script src="styles.js/arrow.functions.js" type="module"></script>
     <script src="styles.js/arrays.methods.js"></script>
     <script src="styles.js/autocheck.strings.methods.js"></script>
+    <script src="styles.js/seven.js"></script>
     <script src="styles.js/modul-six.js"></script>
   </body>
 </html>
