--- a/cars.search.html
+++ b/cars.search.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Search</title>
     <link rel="stylesheet" href="./search.car.css" />
-    <!-- <link rel="stylesheet" href="./css/modal.css" /> -->
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -27,5 +26,6 @@
     <ul class="js-list car-list"></ul>
 
     <script src="./styles.js/cars.search.js"></script>
+    <!-- <script src="./styles.js/cars.search.study.js"></script> -->
   </body>
 </html>
