--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./cars.search.html">Search Car</a>
+    <a href="./practice.html">Inputs</a>
     <button type="button" class="js-click">это кнопка</button>
     <div class="js-box box"></div>
     <script src="./styles.js/styles.js" type="module"></script>
