--- a/practice.html
+++ b/practice.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>DOM</title>
+    <a href="./index.html">Back</a>
   </head>
   <body>
     <!-- ЗАДАЧА 1 -->
